--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^4.2.1",
+    "highlight.js": "^11.6.0",
     "scss": "^0.2.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.4"
